upload all of documents

--- a/.ado/jobs/e2e-test.yml
+++ b/.ado/jobs/e2e-test.yml
@@ -101,12 +101,18 @@ jobs:
           targetFolder: $(Build.StagingDirectory)/ReactUWPTestAppTreeDump/reports
         condition: succeededOrFailed()
 
+      - task: CmdLine@2
+        displayName: dir documents
+        inputs:
+          script: dir /s $(UserProfile)\Documents
+          workingDirectory: packages/E2ETest
+        condition: succeededOrFailed()
+
       - task: CopyFiles@2
         displayName: Copy tree dump output files
         inputs:
           sourceFolder: $(UserProfile)\Documents
           targetFolder: $(Build.StagingDirectory)/ReactUWPTestAppTreeDump
-          contents: TreeDump\**
         condition: succeededOrFailed()
 
       - task: CopyFiles@2
