Find the proper remote

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "lage build -- --color",
     "lint": "lage lint --verbose -- --color",
     "lint:fix": "lage lint:fix -- --color",
-    "change": "beachball change",
-    "clean": "lage clean -- --color",
+    "change": "powershell -NoProfile -Command $remoteLine = \"git remote -v | Select-String -Pattern '(fetch)' | Select-String -pattern 'https://github.com/microsoft/react-native-windows';$remote = ('' + $remoteLine).split()[0];beachball change --branch $remote/master\"",
     "format": "format-files -i -style=file -assume-filename=../.clang-format",
     "format:verify": "format-files -i -style=file -assume-filename=../.clang-format -verify",
     "test": "lage test --verbose -- --color",
