Consilidate nuget feed for selfhost

--- a/vnext/NuGet.Config
+++ b/vnext/NuGet.Config
@@ -4,7 +4,6 @@
     <add key="repositoryPath" value="packages" />
   </config>
   <packageSources>
-    <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="msreact-public" value="https://pkgs.dev.azure.com/ms/react-native/_packaging/react-native-public/nuget/v3/index.json" />
+    <add key="microsoft-reactnative-public-dev" value="https://pkgs.dev.azure.com/ms/_packaging/react-native-windows-dev/nuget/v3/index.json" />
   </packageSources>
 </configuration>
