--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "lage build",
+    "build": "lage build -- --color",
     "lint": "lage lint --verbose -- --color",
     "lint:fix": "lage lint:fix -- --color",
     "change": "beachball change",
