--- a/vnext/Desktop.UnitTests/React.Windows.Desktop.UnitTests.vcxproj.filters
+++ b/vnext/Desktop.UnitTests/React.Windows.Desktop.UnitTests.vcxproj.filters
@@ -55,6 +55,12 @@
     <ClCompile Include="WinRTNetworkingMocks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JsiRuntimeUnitTests.cpp">
+      <Filter>Unit Tests</Filter>
+    </ClCompile>
+    <ClCompile Include="ChakraCoreRuntimeUnitTests.cpp">
+      <Filter>Unit Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
