--- a/vnext/NuGet.Config
+++ b/vnext/NuGet.Config
@@ -4,8 +4,11 @@
     <add key="repositoryPath" value="packages" />
   </config>
   <packageSources>
+    <clear />
+    <add key="react-native" value="https://pkgs.dev.azure.com/ms/react-native/_packaging/react-native-public/nuget/v3/index.json" />
     <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="msreact-public" value="https://pkgs.dev.azure.com/ms/react-native/_packaging/react-native-public/nuget/v3/index.json" />
   </packageSources>
-
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>  
 </configuration>
