--- a/vnext/local-cli/generator-windows/templates/cpp/proj-experimental/NuGet.Config
+++ b/vnext/local-cli/generator-windows/templates/cpp/proj-experimental/NuGet.Config
@@ -4,7 +4,11 @@
     <add key="repositoryPath" value="packages" />
   </config>
   <packageSources>
-    <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <clear />
     <add key="react-native" value="https://pkgs.dev.azure.com/ms/_packaging/react-native/nuget/v3/index.json" />
+    <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>  
 </configuration>
