--- a/vnext/NuGet.Config
+++ b/vnext/NuGet.Config
@@ -4,7 +4,10 @@
     <add key="repositoryPath" value="packages" />
   </config>
   <packageSources>
+    <clear />
     <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
-
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>  
 </configuration>
