[0.60] Make package config more strict

--- a/current/local-cli/generator-wpf/templates/proj/NuGet.Config
+++ b/current/local-cli/generator-wpf/templates/proj/NuGet.Config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <clear />
+    <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
+  <disabledPackageSources>
+    <clear />
+  </disabledPackageSources>  
 </configuration>
