Make x64 the default platform

--- a/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj.filters
+++ b/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="ExternalFiles\Shared">
       <UniqueIdentifier>{29f908a2-84b5-43af-b690-b33a68e426db}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ExternalFiles\Microsoft.ReactNative\JSI">
+      <UniqueIdentifier>{c27e30dc-f28b-48b8-8a9c-1a57adada7e7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ExternalFiles\Shared\JSI">
+      <UniqueIdentifier>{8b4f18d5-12c7-49cd-890c-f0c12cf97ba6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DynamicReaderTest.cpp">
@@ -45,8 +51,20 @@
     <ClCompile Include="ChakraEdgeRuntimeTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(JSI_SourcePath)\jsi\test\testlib.cpp">
+    <ClCompile Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(ReactNativeWindowsDir)Shared\Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Microsoft.ReactNative\JSI\ChakraJsiRuntime_edgemode.cpp">
+      <Filter>ExternalFiles\Microsoft.ReactNative\JSI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Shared\JSI\ChakraRuntime.cpp">
+      <Filter>ExternalFiles\Shared\JSI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Shared\JSI\ChakraApi.cpp">
+      <Filter>ExternalFiles\Shared\JSI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -74,7 +92,7 @@
     <ClInclude Include="CommonReaderTest.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(JSI_SourcePath)\jsi\test\testlib.h">
+    <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
