--- a/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
+++ b/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
@@ -89,10 +89,7 @@
         $(ReactNativeWindowsDir);
         $(ReactNativeWindowsDir)Common;
         $(ReactNativeWindowsDir)stubs;
-        $(ReactNativeWindowsDir)include;
-        $(ReactNativeWindowsDir)Shared;
         $(ReactNativeWindowsDir)Shared\tracing;
-        $(ReactNativeWindowsDir)include\Shared;
         $(ReactNativeWindowsDir)Microsoft.ReactNative;
         $(YogaDir);
         %(AdditionalIncludeDirectories)
@@ -146,6 +143,9 @@
     <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Microsoft.ReactNative\JSI\ChakraJsiRuntime_edgemode.cpp" />
+    <ClCompile Include="..\Shared\JSI\ChakraApi.cpp" />
+    <ClCompile Include="..\Shared\JSI\ChakraRuntime.cpp" />
     <ClCompile Include="ChakraEdgeRuntimeTests.cpp" />
     <ClCompile Include="DynamicReaderTest.cpp" />
     <ClCompile Include="JsiArgumentReaderTest.cpp" />
