Skipping clear tag to insert private feed after

--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -95,7 +95,7 @@ steps:
         $newSource.Attributes.Append($keyAttr);
         $newSource.Attributes.Append($valueAttr);
         $packageSources = $xml.ChildNodes.Item(1).packageSources;
-        $packageSources.InsertBefore($newSource, $packageSources.FirstChild);
+        $packageSources.InsertAfter($newSource, $packageSources.FirstChild);
         $xml.save("$(Agent.BuildDirectory)\testcli\windows\Nuget.Config");
 
     condition: and(succeeded(), eq('true', ${{ parameters.experimentalNugetDependency }}))
