--- a/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj.filters
+++ b/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj.filters
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="ChakraCoreRuntimeUnitTests.cpp" />
-    <ClCompile Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.cpp" />
     <ClCompile Include="$(ReactNativeDir)\ReactCommon\cxxreact\tests\RecoverableErrorTest.cpp">
       <Filter>cxxreact\tests</Filter>
     </ClCompile>
@@ -107,10 +105,15 @@
     <ClCompile Include="$(ReactNativeDir)\ReactCommon\react\renderer\uimanager\tests\FabricUIManagerTest.cpp">
       <Filter>react\renderer\uimanager\tests</Filter>
     </ClCompile>
+    <ClCompile Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.cpp">
+      <Filter>jsi\jsi\test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h" />
+    <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h">
+      <Filter>jsi\jsi\test</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
