Re-enabled V8,ChakraCore switching

--- a/.ado/jobs/desktop.yml
+++ b/.ado/jobs/desktop.yml
@@ -19,8 +19,13 @@ jobs:
           (FullyQualifiedName!=RNTesterIntegrationTests::WebSocket)&
           (FullyQualifiedName!~WebSocketModule_)&
           (FullyQualifiedName!=WebSocketResourcePerformanceTest::ProcessThreadsPerResource)
+      # HostFunctionTest              - Crashes under JSI/V8
+      # HostObjectProtoTest           - Crashes under JSI/V8
+      # PreparedJavaScriptSourceTest  - Asserts/Fails under JSI/ChakraCore
       - name: Desktop.UnitTests.Filter
         value: >
+          (FullyQualifiedName!~HostFunctionTest)
+          (FullyQualifiedName!~HostObjectProtoTest)
           (FullyQualifiedName!~PreparedJavaScriptSourceTest)
     displayName: Desktop
     strategy:
