--- a/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj.filters
+++ b/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj.filters
@@ -114,6 +114,7 @@
     <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h">
       <Filter>jsi\jsi\test</Filter>
     </ClInclude>
+    <ClInclude Include="JsiRuntimeUnitTests.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
