--- a/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj
+++ b/vnext/ReactCommon.UnitTests/ReactCommon.UnitTests.vcxproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h" />
+    <ClInclude Include="JsiRuntimeUnitTests.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
